engagetrack-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: engagetrack
  labels:
    app: engagetrack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: engagetrack
  template:
    metadata:
      labels:
        app: engagetrack
    spec:
      securityContext:
        runAsUser: 1000
        runAsNonRoot: true
      containers:
      - name: engagetrack
        image: engagetrackacr.azurecr.io/engagetrack:latest
        ports:
        - containerPort: 8501
