engagetrack-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: engagetrack-service
spec:
  type: LoadBalancer
  selector:
    app: engagetrack
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8501
